tests/snapshot/error/stack_trace/non_error/error_like_message_only.js
class MyError {
  constructor(message) {
    this.message = message;
  }
}

1;
throw new MyError("foo");
2;